<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:id="@+id/GridLayoutTest"
    android:focusableInTouchMode="false"
    android:columnOrderPreserved="true"
    android:rowOrderPreserved="true"
    android:useDefaultMargins="false">


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingBottom="-0dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <TextView
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tutorial_Title"
                android:id="@+id/TutorialTitle"
                android:layout_marginTop="25dp"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_marginLeft="25dp" />

            <TextView
                android:layout_width="708dp"
                android:layout_height="60dp"
                android:text="@string/appinfo_effect_name"
                android:id="@+id/TitleContent"
                android:textSize="50sp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="25dp" />

        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <TableLayout
                android:layout_width="500dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="0dp">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:id="@+id/BasicsButton"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textAllCaps="false"
                        android:text="@string/buttontext_tutorial_AppBasics"
                        android:layout_marginRight="75dp"
                        android:layout_gravity="bottom" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:text="@string/buttontext_tutorial_KstateEngg"
                        android:id="@+id/EnggButton"
                        android:layout_column="1"
                        android:textSize="24sp"
                        android:textAllCaps="false"
                        android:textStyle="normal" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:id="@+id/HalveButton"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textAllCaps="false"
                        android:singleLine="false"
                        android:text="@string/buttontext_tutorial_halve_samples"
                        android:layout_marginRight="75dp"
                        android:layout_gravity="bottom" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:text="@string/buttontext_tutorial_double_samples"
                        android:id="@+id/DoubleButton"
                        android:layout_column="1"
                        android:textSize="24sp"
                        android:textAllCaps="false" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:id="@+id/LowpassButton"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textAllCaps="false"
                        android:singleLine="false"
                        android:text="@string/buttontext_tutorial_low_pass"
                        android:layout_marginRight="75dp"
                        android:layout_gravity="bottom" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:text="@string/buttontext_tutorial_high_pass"
                        android:id="@+id/HighpassButton"
                        android:layout_column="1"
                        android:textSize="24sp"
                        android:textAllCaps="false" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:id="@+id/ReverseButton"
                        android:layout_column="0"
                        android:textSize="24sp"
                        android:textAllCaps="false"
                        android:singleLine="false"
                        android:text="@string/buttontext_tutorial_reverse"
                        android:layout_marginRight="75dp"
                        android:layout_gravity="bottom" />

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:text="@string/buttontext_tutorial_reverb"
                        android:id="@+id/button_reverb"
                        android:layout_column="1"
                        android:textSize="24sp"
                        android:textAllCaps="false" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:id="@+id/button_back_to_application"
                        android:layout_column="0"
                        android:textSize="30sp"
                        android:singleLine="false"
                        android:text="@string/buttontext_tutorial_back_to_main_app"
                        android:textAllCaps="false"
                        android:layout_gravity="bottom"
                        android:layout_span="2"
                        android:nestedScrollingEnabled="false" />

                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="700dp"
                android:layout_height="600dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/appinfo_tutorial"
                android:id="@+id/text_main_content"
                android:lineSpacingMultiplier="1.3"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:textSize="28sp" />

        </LinearLayout>

    </TableRow>


</TableLayout>
